--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 study-config/.idea/
 study-config/target/
 study-config/study-config.iml
+study-data-jpa/.idea/
+study-data-jpa/target/classes/com/springboottest/web/TestController.class
+study-data-jpa/target/
+study-data-jpa/study-data-jpa.iml
