--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ study-data-jpa/.idea/
 study-data-jpa/target/classes/com/springboottest/web/TestController.class
 study-data-jpa/target/
 study-data-jpa/study-data-jpa.iml
+.idea/
