--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ study-data-jpa/target/classes/com/springboottest/web/TestController.class
 study-data-jpa/target/
 study-data-jpa/study-data-jpa.iml
 .idea/
+study-data-mongo/target/
+study-data-mongo/study-data-mongo.iml
+study-data-mongo/study-data-jpa.iml
+study-datasource/study-datasource.iml
