--- a/study-config-dependency/pom.xml
+++ b/study-config-dependency/pom.xml
@@ -3,17 +3,16 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.springboottest</groupId>
-  <artifactId>study-datasource</artifactId>
+  <artifactId>study-config-dependency</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>study-datasource</name>
+  <name>study-config-dependency</name>
   <url>http://maven.apache.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <springboot.version>1.4.2.RELEASE</springboot.version>
-    <mysql.version>5.1.30</mysql.version>
   </properties>
 
   <dependencyManagement>
@@ -39,18 +38,6 @@
       <artifactId>spring-boot-starter-web</artifactId>
       <version>${springboot.version}</version>
     </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
-      <version>${springboot.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>${mysql.version}</version>
-    </dependency>
-
   </dependencies>
 
 
