--- a/study-config-autoconfigration-starter/pom.xml
+++ b/study-config-autoconfigration-starter/pom.xml
@@ -3,17 +3,16 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.springboottest</groupId>
-  <artifactId>study-data-jpa</artifactId>
+  <artifactId>study-config-autoconfigration-starter</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>study-data-jpa</name>
+  <name>study-config-autoconfigration-starter</name>
   <url>http://maven.apache.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <springboot.version>1.4.2.RELEASE</springboot.version>
-    <mysql.version>5.1.30</mysql.version>
   </properties>
 
   <dependencyManagement>
@@ -35,39 +34,12 @@
     </dependency>
 
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-      <version>${springboot.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
-      <version>${springboot.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>${mysql.version}</version>
+      <groupId>com.springboottest</groupId>
+      <artifactId>study-config-autoconfigration</artifactId>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
 
   </dependencies>
 
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>${springboot.version}</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>repackage</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
 </project>
