--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ study-datasource/study-datasource.iml
 study-config-dependency/target/
 study-config-autoconfigration-starter/target/
 study-config-autoconfigration/target/
+study-ssl/target/
